# claude_cadence

./: .gitignore  .pre-commit-config.yaml  AGENT_SIMPLIFICATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_CONTINUE_IMPLEMENTATION.md  CODE_REVIEW_CRITICAL_ISSUE_DETECTION.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_FIX_IMPLEMENTATION_PLAN.md  CODE_REVIEW_FLOW.md  DEAD_CODE_REMOVAL_SUMMARY.md  FIX_SUPERVISOR_LOGGING.md  ITERATION_1_SAFETY.md  LOGGING_IMPLEMENTATION_PLAN.md  README.md  SUPERVISOR_AGENT_LOGGING_IMPLEMENTED.md  TODO.md  cadence.py  cadence_prompt_fixes_plan.md  claude_cadence_prompt_flow_analysis.md  claude_cadence_prompt_system_guide.md  config.yaml  decision_test_session.json  execution_context_refactor_plan.md  orchestrate.py  requirements.txt  run_tests.sh  setup.py  temp_todo_list.txt  test_agent.py  test_fix_agent.py  test_fix_flow.py  test_logging_directly.py  test_minimal.py  test_simple_integration.py  test_subprocess_env.py  test_supervisor_logging.py  zen_consensus_review_todo.md  zen_mcp_integration_summary.md  zen_trigger_paths_documentation.md
.cadence/supervisor/: session_20250621_114424_8b386c36.md  session_20250621_114425_da36d716.md  session_20250621_114426_taskmaster.md  session_20250621_114427_369437b9.md  session_20250621_114428_0297dac1.md  session_20250621_114428_d60843be.md  session_20250621_114429_7443e4f3.md  session_20250621_114430_5b522c73.md  session_20250621_114650_babb782e.md  session_20250621_114651_a1bdd840.md  session_20250621_114652_taskmaster.md  session_20250621_114653_3bc0b28d.md  session_20250621_114654_7c74727e.md  session_20250621_114654_ae228b05.md  session_20250621_114655_028cb7eb.md  session_20250621_114655_5f07cec7.md  session_20250621_114713_0d0bdd18.md  session_20250621_114713_19a40315.md  session_20250621_114715_ce378e50.md  session_20250621_114715_taskmaster.md  session_20250621_114716_833dce46.md  session_20250621_114717_44af3f55.md  session_20250621_114717_c607bd1e.md  session_20250621_114718_de072272.md  session_20250621_115256_53faf497.md  session_20250621_115256_f1220b85.md  session_20250621_115258_afc733b3.md  session_20250621_115258_taskmaster.md  session_log_test_123.md  (+13 more)
.serena/: project.yml
.taskmaster/: config.json  state.json
agr_mcp/: .gitignore  .pre-commit-config.yaml  CONFIG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test_http_client.py  test_logging.py
agr_mcp/.serena/: project.yml
agr_mcp/.serena/memories/: code_style_conventions.md  project_purpose.md  suggested_commands.md  task_completion_workflow.md
agr_mcp/analysis/: agr_api_documentation.md
agr_mcp/examples/: context_manager_usage.py  dependency_injection_examples.py
agr_mcp/src/: __init__.py  cli.py  config.py  errors.py  module_config.py  server.py
agr_mcp/src/tools/: api_schema.py  file_download.py  gene_query.py  metadata_tools.py
agr_mcp/src/utils/: __init__.py  async_parsing.py  context_managers.py  dependency_injection.py  di_integration.py  enhanced_context_managers.py  enhanced_di_framework.py  factory_patterns.py  file_manager.py  http_client.py  logging_config.py  request_cache.py  validators.py
agr_mcp/tests/: JSON_STREAM_FIX_SUMMARY.md  conftest.py  test_agent_json_extraction.py  test_dependency_injection.py  test_error_handling.py  test_file_download.py  test_gene_query.py  test_json_stream_extraction.py  test_json_stream_improvements.py  test_server.py
analysis/alliance/agr_mcp/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
analysis/alliance/agr_mcp/.serena/: project.yml
analysis/alliance/agr_mcp/.serena/cache/python/: document_symbols_cache_v20-05-25.pkl
analysis/alliance/agr_mcp/src/: __init__.py
analysis/alliance/agr_mcp/src/agr_mcp/: __init__.py  client.py  models.py  server.py  tools.py
analysis/alliance/agr_mcp/src/agr_mcp/core/: __init__.py  config.py  handlers.py  server.py
analysis/alliance/agr_mcp/src/agr_mcp/data/: __init__.py  models.py  schemas.py
analysis/alliance/agr_mcp/src/agr_mcp/formatters/: __init__.py
analysis/alliance/agr_mcp/src/agr_mcp/services/: __init__.py  api.py  database.py  s3.py
analysis/alliance/agr_mcp/src/agr_mcp/tools/: __init__.py
analysis/alliance/agr_mcp/src/agr_mcp/utils/: __init__.py  auth.py  cache.py  logging.py  validation.py
analysis/alliance/agr_mcp/tests/: __init__.py  conftest.py
analysis/alliance/agr_mcp/tests/integration/: __init__.py  test_server.py
analysis/alliance/agr_mcp/tests/unit/: __init__.py  test_cache.py  test_client.py  test_models.py  test_tools.py
cadence/: __init__.py  __main__.py  agent_communication_handler.py  agent_dispatcher.py  agent_messages.py  code_review_agent.py  config.py  constants.py  dispatch_logging.py  enhanced_agent_dispatcher.py  fix_agent_dispatcher.py  fix_iteration_tracker.py  fix_verification_workflow.py  json_stream_monitor.py  log_utils.py  orchestrator.py  orchestrator_backup.py  prompt_loader.py  prompt_utils.py  prompts.py  prompts.yaml  prompts.yml  prompts.yml.tmpl  retry_utils.py  review_result_parser.py  review_trigger_detector.py  scope_validator.py  supervisor.py  supervisor_cli.py  task_manager.py  task_supervisor.py  unified_agent.py  utils.py  workflow_state_machine.py  zen_integration.py  zen_prompts.py
docs/: CODE_REVIEW_2_PHASE3.md  FINAL_CODE_REVIEW_RESULTS.md  PHASE_4_COMPLETION_SUMMARY.md  TASKMASTER_INTEGRATION_SPEC.md  TASKMASTER_INTEGRATION_TODO.md  TASKMASTER_TODO_BACKUP.md  WORKFLOW_DOCUMENTATION.md  json_handoff_retry_system.md  prompts-guide.md  quick-reference.md  taskmaster_json_retry_tasks_backup.md
examples/: basic_checkpoint.py  basic_usage.py  custom_prompts.py  early_exit_demo.py  opus_supervisor.py  task_completion_demo.py  taskmaster_guided.py
scripts/: check_mcp_servers.py
tests/: README.md  __init__.py  conftest.py  manual_test_runner.py  requirements-test.txt  test_agent_communication_handler.py  test_config.py  test_json_stream_monitor.py  test_log_utils.py  test_orchestrator.py  test_prompt_loader.py  test_prompts.py  test_retry_utils.py  test_unified_agent.py  test_utils.py  test_zen_integration.py
(+115 files in other folders)
