[metadata]
name = agr-mcp-server
version = attr: agr_mcp.__version__
description = MCP server for Alliance Genome Resources data access
long_description = file: README.md
long_description_content_type = text/markdown
author = Alliance Genome Resources
author_email = support@alliancegenome.org
url = https://github.com/alliance-genome/agr-mcp-server
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    mcp-sdk>=0.1.0
    httpx>=0.25.0
    pydantic>=2.0.0
    pyyaml>=6.0
    rich>=13.0.0
    click>=8.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agr-mcp = agr_mcp.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg,
    .venv,
    venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
